--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -168,4 +168,17 @@
         app:layout_constraintTop_toBottomOf="@+id/button"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/roundstv">
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Offline?"
+        android:id="@+id/offlineswitch"
+       />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
