--- a/app/src/main/res/layout/activity_add_imagelist.xml
+++ b/app/src/main/res/layout/activity_add_imagelist.xml
@@ -9,6 +9,7 @@
     android:id="@+id/text1"
     android:maxLines="2"
     android:ellipsize="end"
+    android:autoLink="web"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
