--- a/app/src/main/res/layout/activity_add_list_group.xml
+++ b/app/src/main/res/layout/activity_add_list_group.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/holo_purple"
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
 </LinearLayout>
