--- a/app/src/main/res/layout/activity_add_list_item.xml
+++ b/app/src/main/res/layout/activity_add_list_item.xml
@@ -9,57 +9,66 @@
     android:layout_height="wrap_content"
     android:paddingBottom="10dp">
 
-<!--    <TextView-->
-<!--        android:id="@+id/tv"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text=""-->
-<!--        android:textSize="20sp"-->
-<!--        android:textStyle="bold" />-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/et"
+
+
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textNoSuggestions"
-        android:hint="Yes">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/inputlayout"
+        android:gravity="center"
+        >
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
             android:inputType="textNoSuggestions"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/linkbtn"
+            app:layout_constraintRight_toRightOf="@id/linkbtn"
+            app:layout_constraintTop_toTopOf="parent"
+            android:hint="Yes">
 
-            />
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                android:inputType="textNoSuggestions|textMultiLine"
 
-    </com.google.android.material.textfield.TextInputLayout>
 
+                />
 
+        </com.google.android.material.textfield.TextInputLayout>
 
-
-<!--    <EditText-->
-<!--        android:id="@+id/et"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/tv"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:background="@drawable/custom_border_textedit"-->
-<!--        android:ems="10"-->
-<!--        />-->
+    <ImageButton
+        android:id="@+id/linkbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/imgbtn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@android:color/transparent"
+        android:padding="13dp"
+        android:src="@drawable/ic_baseline_insert_link_24" />
 
     <ImageButton
         android:id="@+id/imgbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/et"
-        android:layout_alignRight="@id/et"
-        android:layout_alignBottom="@id/et"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@android:color/transparent"
         android:padding="13dp"
         android:src="@drawable/camera" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/et"
+        android:layout_below="@id/inputlayout"
         android:orientation="vertical"
         tools:ignore="ExtraText">
     <androidx.recyclerview.widget.RecyclerView
@@ -67,5 +76,11 @@
         android:layout_height="match_parent"
         android:nestedScrollingEnabled="false"
         android:id="@+id/filesList"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
+            android:id="@+id/linksList"/>
     </LinearLayout>
 </RelativeLayout>
