--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Button
         android:id="@+id/unitone"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="80dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
@@ -22,7 +23,7 @@
     <Button
         android:id="@+id/unittwo"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="80dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="46dp"
@@ -30,13 +31,13 @@
         android:layout_marginRight="32dp"
         android:background="@drawable/round"
         android:shadowRadius="5"
-        android:layout_below="@+id/unitone"
+
         android:text="Unit 2"
         android:textColor="@android:color/white" />
     <Button
         android:id="@+id/unitthree"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="80dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="46dp"
@@ -44,8 +45,39 @@
         android:layout_marginRight="32dp"
         android:background="@drawable/round"
         android:shadowRadius="5"
-        android:layout_below="@+id/unittwo"
+
         android:text="Unit 3"
         android:textColor="@android:color/white" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/unitfour"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/round"
+        android:shadowRadius="5"
+
+        android:text="Unit 4"
+        android:textColor="@android:color/white" />
+
+
+    <Button
+        android:id="@+id/unitfive"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/round"
+        android:shadowRadius="5"
+
+        android:text="Unit 5"
+        android:textColor="@android:color/white" />
+
+</LinearLayout>
