--- a/app/src/main/res/layout/activity_view_list_item.xml
+++ b/app/src/main/res/layout/activity_view_list_item.xml
@@ -53,6 +53,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
+
+            <ListView
+
+                android:id="@+id/linksList"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
