--- a/app/src/main/res/layout/activity_view_patient.xml
+++ b/app/src/main/res/layout/activity_view_patient.xml
@@ -14,11 +14,22 @@
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@id/navigation"
         android:animateLayoutChanges="true"
         />
 
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+
+        android:id="@+id/delete"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintRight_toLeftOf="@id/fab"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/ic_baseline_delete_outline_24"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+          />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
 
@@ -28,22 +39,12 @@
         android:layout_gravity="bottom"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/ic_baseline_edit_24"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
