--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -18,9 +18,28 @@
 
     android:outlineAmbientShadowColor="@color/black"
     card_view:cardUseCompatPadding="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/serialNumber"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:padding="3dp"
+            android:layout_marginLeft="5dp"
+            android:textSize="25dp"
+            android:text="1"
+            />
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:background="#999999" />
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -28,6 +47,7 @@
     android:clickable="false"
 
     >
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,5 +78,6 @@
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent" />-->
 </LinearLayout>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
 </LinearLayout>
