--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/patient"
-        android:title="Patients"
+        android:id="@+id/patientOffline"
+        android:title="Offline Patients"
         android:icon="@drawable/user"/>
+
+    <item
+        android:id="@+id/patientOnline"
+        android:title="Online Patients"
+        android:icon="@drawable/user"/>
+
     <item
         android:id="@+id/notes"
         android:title="Daily Notes"
